<resources>
    <string name="app_name">Mon Age en Minute</string>
    <string name="calculez_votre">CALCULEZ VOTRE</string>
    <string name="age">AGE</string>
    <string name="en_minute">EN MINUTES !</string>
    <string name="selectionnez_une_date">SELECTIONNEZ UNE DATE</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="nombre_de_minutes_v_cues">Nombre de minutes vécues</string>
</resources>