<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFECB3"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/calculez_votre"
        android:textColor="#EF5350"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2A000000"
        android:text="@string/age"
        android:paddingVertical="4dp"
        android:paddingHorizontal="15dp"
        android:layout_margin="6dp"
        android:textColor="#EF5350"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_minute"
        android:textColor="#EF5350"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonDatePicker"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/selectionnez_une_date"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/dateSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/dateSelectedHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/date_de_naissance"
        android:textColor="#59523F"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/nbMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/nbMinHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nombre_de_minutes_v_cues"
        android:textColor="#59523F"
        android:visibility="invisible" />


</LinearLayout>